OWH-2150 Map tooltip alignment issue

--- a/software/owh/client/app/css/menu.css
+++ b/software/owh/client/app/css/menu.css
@@ -161,7 +161,7 @@
 
 .primary-filter-bar {
     background: white;
-    z-index: 2;
+    z-index: 100;
     position: relative;
     display: flex;
 }
@@ -225,7 +225,7 @@
         display: flex;
         align-items: stretch;
         background: rgba(246, 246, 246, 1);
-        z-index: 2;
+        z-index: 100;
         position: relative;
         min-height: 60px;
     }
